--- a/hobbies.html
+++ b/hobbies.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>My Hobbies</title>
+    <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
     <h3>My Hobbies</h3>
@@ -11,5 +12,7 @@
       <li><a href="https://www.appbrewery.co/p/web-development-course-resources/">Learning To Code</a></li>
       <li>Making Food</li>
     </ol>
+    <a href="index.html"> Home </a>
+    <a href="hobbies.html"> Contact Me</a>
   </body>
 </html>
