--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
 <head>
   <meta charset="utf-8">
   <title>Arjun's Personal Site</title>
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
   <table cellspacing = "20">
     <tr>
-      <td><img src="images/arjun.jpg" alt="arjun profile picture" height="200" width="200" /></td>
+      <td><img class="arjun" src="images/arjun.jpg" alt="arjun profile picture"/></td>
       <td>
         <h1> Arjun Tejpal</h1>
         <p><em>Student at <strong><a href="https://www.appbrewery.co/">The App Brewery</a></strong></em></p>
